--- a/Makefile.win
+++ b/Makefile.win
@@ -1,4 +1,4 @@
-# Project: Project1
+# Project: Visualizador OpenGL
 # Makefile created by Dev-C++ 4.9.9.2
 
 CPP  = g++.exe
@@ -8,7 +8,7 @@ RES  =
 OBJ  = mainCG.o objetoGrafico.o $(RES)
 LINKOBJ  = mainCG.o objetoGrafico.o $(RES)
 LIBS =  -L"C:/Dev-Cpp/lib" -L"C:/Dev-Cpp/lib" -lopengl32 -lglut32 -lglu32  
-INCS =  -I"C:/Dev-Cpp/include"  -I"C:/Dev-Cpp/include/GL"  -I"." 
+INCS =  -I"C:/Dev-Cpp/include"  -I"."  -I"C:/Dev-Cpp/include/GL"  -I"." 
 CXXINCS =  -I"C:/Dev-Cpp/lib/gcc/mingw32/3.4.2/include"  -I"C:/Dev-Cpp/include/c++/3.4.2/backward"  -I"C:/Dev-Cpp/include/c++/3.4.2/mingw32"  -I"C:/Dev-Cpp/include/c++/3.4.2"  -I"C:/Dev-Cpp/include"  -I"C:/Dev-Cpp/include/GL"  -I"." 
 BIN  = visualizador.exe
 CXXFLAGS = $(CXXINCS)  
