--- a/OpenGL/DevC++/GlutTEST - 09 - TRANSFORMAÇÕES 02/Makefile.win
+++ b/OpenGL/DevC++/GlutTEST - 09 - TRANSFORMAÇÕES 02/Makefile.win
@@ -8,7 +8,7 @@ RES  =
 OBJ  = main.o $(RES)
 LINKOBJ  = main.o $(RES)
 LIBS =  -L"C:/Dev-Cpp/lib" -L"C:/Dev-Cpp/lib" -lopengl32 -lglut32 -lglu32  
-INCS =  -I"C:/Dev-Cpp/include"  -I"C:/Dev-Cpp/include/GL" 
+INCS =  -I"C:/Dev-Cpp/include"  -I"."  -I"C:/Dev-Cpp/include/GL" 
 CXXINCS =  -I"C:/Dev-Cpp/lib/gcc/mingw32/3.4.2/include"  -I"C:/Dev-Cpp/include/c++/3.4.2/backward"  -I"C:/Dev-Cpp/include/c++/3.4.2/mingw32"  -I"C:/Dev-Cpp/include/c++/3.4.2"  -I"C:/Dev-Cpp/include"  -I"C:/Dev-Cpp/include/GL" 
 BIN  = "Project TEST.exe"
 CXXFLAGS = $(CXXINCS)  
