--- a/Makefile.win
+++ b/Makefile.win
@@ -7,9 +7,9 @@ WINDRES = windres.exe
 RES  = 
 OBJ  = mainCG.o objetoGrafico.o $(RES)
 LINKOBJ  = mainCG.o objetoGrafico.o $(RES)
-LIBS =  -L"C:/Dev-Cpp/lib" -L"C:/Dev-Cpp/lib" -lopengl32 -lglut32 -lglu32  
-INCS =  -I"C:/Dev-Cpp/include"  -I"."  -I"C:/Dev-Cpp/include/GL"  -I"." 
-CXXINCS =  -I"C:/Dev-Cpp/lib/gcc/mingw32/3.4.2/include"  -I"C:/Dev-Cpp/include/c++/3.4.2/backward"  -I"C:/Dev-Cpp/include/c++/3.4.2/mingw32"  -I"C:/Dev-Cpp/include/c++/3.4.2"  -I"C:/Dev-Cpp/include"  -I"C:/Dev-Cpp/include/GL"  -I"." 
+LIBS =  -L"C:/Users/Nikolas Moya/Documents/GitHub/DevCPP/App/devcpp/lib" -L"C:/Dev-Cpp/lib" -lopengl32 -lglut32 -lglu32  
+INCS =  -I"C:/Users/Nikolas Moya/Documents/GitHub/DevCPP/App/devcpp/include"  -I"." 
+CXXINCS =  -I"C:/Users/Nikolas Moya/Documents/GitHub/DevCPP/App/devcpp/lib/gcc/mingw32/3.4.2/include"  -I"C:/Users/Nikolas Moya/Documents/GitHub/DevCPP/App/devcpp/include/c++/3.4.2/backward"  -I"C:/Users/Nikolas Moya/Documents/GitHub/DevCPP/App/devcpp/include/c++/3.4.2/mingw32"  -I"C:/Users/Nikolas Moya/Documents/GitHub/DevCPP/App/devcpp/include/c++/3.4.2"  -I"C:/Users/Nikolas Moya/Documents/GitHub/DevCPP/App/devcpp/include"  -I"." 
 BIN  = visualizador.exe
 CXXFLAGS = $(CXXINCS)  
 CFLAGS = $(INCS)  
