--- a/Makefile.win
+++ b/Makefile.win
@@ -11,8 +11,8 @@ LIBS =  -L"C:/Dev-Cpp/lib" -L"C:/Dev-Cpp/lib" -lopengl32 -lglut32 -lglu32
 INCS =  -I"C:/Dev-Cpp/include"  -I"."  -I"C:/Dev-Cpp/include/GL"  -I"." 
 CXXINCS =  -I"C:/Dev-Cpp/lib/gcc/mingw32/3.4.2/include"  -I"C:/Dev-Cpp/include/c++/3.4.2/backward"  -I"C:/Dev-Cpp/include/c++/3.4.2/mingw32"  -I"C:/Dev-Cpp/include/c++/3.4.2"  -I"C:/Dev-Cpp/include"  -I"C:/Dev-Cpp/include/GL"  -I"." 
 BIN  = visualizador.exe
-CXXFLAGS = $(CXXINCS)  
-CFLAGS = $(INCS)  
+CXXFLAGS = $(CXXINCS)   -Wall
+CFLAGS = $(INCS)   -Wall
 RM = rm -f
 
 .PHONY: all all-before all-after clean clean-custom
