--- a/Makefile.win
+++ b/Makefile.win
@@ -5,14 +5,14 @@ CPP  = g++.exe
 CC   = gcc.exe
 WINDRES = windres.exe
 RES  = 
-OBJ  = mainCG.o objetoGrafico.o $(RES)
-LINKOBJ  = mainCG.o objetoGrafico.o $(RES)
-LIBS =  -L"C:/Dev-Cpp/lib" -L"C:/Dev-Cpp/lib" -lopengl32 -lglut32 -lglu32  
-INCS =  -I"C:/Dev-Cpp/include"  -I"."  -I"C:/Dev-Cpp/include/GL"  -I"." 
-CXXINCS =  -I"C:/Dev-Cpp/lib/gcc/mingw32/3.4.2/include"  -I"C:/Dev-Cpp/include/c++/3.4.2/backward"  -I"C:/Dev-Cpp/include/c++/3.4.2/mingw32"  -I"C:/Dev-Cpp/include/c++/3.4.2"  -I"C:/Dev-Cpp/include"  -I"C:/Dev-Cpp/include/GL"  -I"." 
+OBJ  = mainCG.o objetoGrafico.o grafo.o $(RES)
+LINKOBJ  = mainCG.o objetoGrafico.o grafo.o $(RES)
+LIBS =  -L"C:/Program Files/Dev-Cpp/lib" -L"C:/Dev-Cpp/lib" -lopengl32 -lglut32 -lglu32  
+INCS =  -I"C:/Program Files/Dev-Cpp/include"  -I"." 
+CXXINCS =  -I"C:/Program Files/Dev-Cpp/lib/gcc/mingw32/3.4.2/include"  -I"C:/Program Files/Dev-Cpp/include/c++/3.4.2/backward"  -I"C:/Program Files/Dev-Cpp/include/c++/3.4.2/mingw32"  -I"C:/Program Files/Dev-Cpp/include/c++/3.4.2"  -I"C:/Program Files/Dev-Cpp/include"  -I"." 
 BIN  = visualizador.exe
-CXXFLAGS = $(CXXINCS)   -Wall
-CFLAGS = $(INCS)   -Wall
+CXXFLAGS = $(CXXINCS)  
+CFLAGS = $(INCS)  
 RM = rm -f
 
 .PHONY: all all-before all-after clean clean-custom
@@ -31,3 +31,6 @@ mainCG.o: mainCG.c
 
 objetoGrafico.o: objetoGrafico.c
 	$(CC) -c objetoGrafico.c -o objetoGrafico.o $(CFLAGS)
+
+grafo.o: grafo.c
+	$(CC) -c grafo.c -o grafo.o $(CFLAGS)
